Fixed blurry image

--- a/CPP_Workshop/style/random.css
+++ b/CPP_Workshop/style/random.css
@@ -42,7 +42,6 @@
 
 table td {
   padding: 0.5em;
-  background-color: #373832;
   color: white;
   border-radius: 0.5em;
   font-size: 0.8em;
